fix: sass updates for generic loading screen
Some adjustments to the generic loading component SASS

--- a/client/src/ui/atoms/loading/index.scss
+++ b/client/src/ui/atoms/loading/index.scss
@@ -2,11 +2,11 @@
 @import "~@mdn/minimalist/sass/mixins/animation";
 
 .generic-loading {
-  @include fade-in();
-
-  padding: $base-spacing;
-
-  p {
-    text-align: center;
-  }
+  @include slow-pulse();
+  align-items: center;
+  /* add short delay so the animation starts from white instead of dark gray */
+  animation-delay: 1s;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
