refactor: small sass refactor for index and sidebar icons
Refactors where we define the colors for icons used in sidebars and icons in containers with a class of `index`.
We might want to think about creating a single SASS file for icons but, perhaps it is good to have the sidebar icons closely colocated with the sidebar etc.

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -170,6 +170,15 @@ a.new {
   */
   .index {
     columns: 300px;
+
+    .icon-experimental,
+    .icon-nonstandard {
+      color: $primary-50;
+    }
+
+    .icon-deprecated {
+      color: $red-100;
+    }
   }
 
   iframe {
@@ -178,20 +187,6 @@ a.new {
 
   iframe:not(.sample-code-frame) {
     border: 0;
-  }
-
-  /*
-   * Used in sidebars and in indexes which are both lists of links.
-   */
-  .sidebar .icon-experimental,
-  .index .icon-experimental,
-  .sidebar .icon-nonstandard,
-  .index .icon-nonstandard {
-    color: $primary-50;
-  }
-  .sidebar .icon-deprecated,
-  .index .icon-deprecated {
-    color: $red-100;
   }
 }
 
