--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -93,11 +93,10 @@ a.new {
     }
   }
 
-  a.self-link {
+  [aria-current] {
+    color: $neutral-100;
     font-weight: bold;
-    // font-style: italic;
     text-decoration: none;
-    color: black;
   }
 
   h2,
