match color for badge icons in indices (#3863)
* match color for badge icons in indices

* refactor: small sass refactor for index and sidebar icons

Refactors where we define the colors for icons used in sidebars and icons in containers with a class of `index`.
We might want to think about creating a single SASS file for icons but, perhaps it is good to have the sidebar icons closely colocated with the sidebar etc.

Co-authored-by: Schalk Neethling <sneethling@mozilla.com>

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -161,6 +161,15 @@ a.new {
   */
   .index {
     columns: 300px;
+
+    .icon-experimental,
+    .icon-nonstandard {
+      color: $primary-50;
+    }
+
+    .icon-deprecated {
+      color: $red-100;
+    }
   }
 
   iframe {
