--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -54,7 +54,9 @@
     width: 18px;
   }
 
-  .icon-experimental {
+  /* icons in sidebars */
+  .icon-experimental,
+  .icon-nonstandard {
     color: $primary-50;
   }
 
