--- a/kumascript/macros/CSS_Ref.ejs
+++ b/kumascript/macros/CSS_Ref.ejs
@@ -549,7 +549,7 @@ for (let characterIndex in characters) {
             `<code>${htmlEscape(index[character][i].label)}</code>`,
             index[character][i].urlPath,
             baseURL,
-            'CSS_Ref'
+            "CSS_Ref"
         )}</li>`;
     }
 
