--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -26,6 +26,120 @@
   position: relative;
 
   main {
+    .modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 10000;
+      overflow: auto;
+      background-color: #201139c4;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      display: flex;
+      padding: 5%;
+
+      .modal-inner {
+        background-color: #391a6e;
+        margin: auto;
+        text-align: center;
+        max-width: 600px;
+        position: relative;
+        display: inline-flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 64px 32px;
+        overflow: hidden;
+        box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
+
+        @media #{$mq-tablet-and-up} {
+          padding: 64px;
+        }
+
+        button {
+          position: absolute;
+          margin: 12px;
+          right: 0px;
+          top: 0px;
+          background: none;
+          color: rgba(255, 255, 255, 0.8);
+          border: none;
+          font-size: 20px;
+          padding: 7px 15px 9px;
+        }
+
+        button:hover {
+          cursor: pointer;
+          background-color: rgba(255, 255, 255, 0.116);
+          color: white;
+        }
+
+        .modal-content {
+          position: relative;
+          z-index: 10001;
+
+          .dino {
+            background-image: url("./svgs/dino.svg");
+            height: 25px;
+            width: 30px;
+            background-repeat: no-repeat;
+            margin: 0 auto;
+            padding-bottom: 12px;
+          }
+
+          h1 {
+            background: $gradient-accent;
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            display: inline-block;
+            font-size: 24px;
+          }
+
+          p {
+            color: white;
+            margin-bottom: 0;
+          }
+
+          a {
+            background: $gradient-secondary;
+            border: none;
+            color: white;
+            padding: 8px 24px 8px 24px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            font-family: "Metropolis";
+            font-weight: 400;
+            width: -moz-fit-content;
+            width: fit-content;
+            margin-top: 36px;
+          }
+
+          a:hover {
+            background: #5b3cc2;
+            cursor: pointer;
+          }
+        }
+
+        .mandala {
+          background-image: url("./svgs/mandala.svg");
+          right: 77px;
+          height: 800px;
+          width: 800px;
+          top: -220px;
+          position: absolute;
+          background-repeat: no-repeat;
+          opacity: 0.5;
+          -webkit-animation: spin 1200s linear infinite;
+          -moz-animation: spin 1200s linear infinite;
+          animation: spin 1200s linear infinite;
+        }
+      }
+    }
     .mobile-cta {
       background: $gradient-secondary;
       border: none;
