--- a/kumascript/macros/HTMLElement.ejs
+++ b/kumascript/macros/HTMLElement.ejs
@@ -7,6 +7,7 @@
   $0 - Element name
   $1 - Text to display (optional)
   $2 - Anchor within the page (optional)
+  $3 - Ignore flaw macro (optional)
 */
 const elementName = $0.toString().toLowerCase();
 let linkText = ($1 || elementName);
@@ -31,5 +32,23 @@ if (linkText === elementName && elementName.indexOf(" ") === -1) {
     linkText = "<code>&lt;" + linkText + "&gt;</code>";
 }
 
-const link = web.smartLink(url, null, linkText, sectionName + '/' + elementName, baseURL);
+// If you use this macro directly in a page like this:
+//
+//   {{HTMLElement("abbr")}}
+//
+// you *want* flaws to bubble up. E.g. a typo like `{{HTMLElement("abbbr")}}`
+// But this macro is called from another macro, like `HTMLRef` then, all those
+// macro calls should be "supressed" because it's a problem with the that sidebar
+// macro, not the page the current user is viewing/working on.
+// So if this 4th argument is passed, it will potentially ignore the macro flaw.
+const ignoreFlawMacro = $3;
+
+const link = web.smartLink(
+    url,
+    null,
+    linkText,
+    sectionName + '/' + elementName,
+    baseURL,
+    ignoreFlawMacro
+);
 %><%- link %>
