use react-modal's body class for open modal styes

--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -1,5 +1,10 @@
 @import "~@mdn/minimalist/sass/vars/layout";
 
+.ReactModal__Body--open {
+  position: fixed;
+  width: 100%;
+}
+
 .page-content-container.plus {
   $grid-gap: 12px;
   $page-width: 1160px;
