--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -58,6 +58,10 @@
         overflow: hidden;
         box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.548);
 
+        &:focus {
+          outline: none;
+        }
+
         button {
           position: absolute;
           margin: 12px;
