--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -160,6 +160,11 @@ a.new {
   */
   .index {
     columns: 300px;
+    margin-bottom: $base-spacing;
+
+    @media #{$mq-small-desktop-and-up} {
+      margin-bottom: $base-spacing * 2;
+    }
 
     .icon-experimental,
     .icon-nonstandard {
