--- a/kumascript/macros/SVGRef.ejs
+++ b/kumascript/macros/SVGRef.ejs
@@ -17,11 +17,11 @@ switch (env.locale) {
 
 // Find the section of SVG this page belongs to (that is the first tag of the form "SVG XYZ")
 var tags = env.tags;
-var found_tag = '';
+var foundTag = '';
 if (tags || typeof tags != 'undefined') {
-    for (i in tags) {
-        if( Object.prototype.hasOwnProperty.call(tags, i) && tags[i] != s_svg_ref_title && tags[i].substr(0, 4) == 'SVG ') {
-            found_tag = tags[i];
+    for (const tag of tags) {
+        if( tag && tag != s_svg_ref_title && tag.substr(0, 4) == 'SVG ') {
+            foundTag = tag;
             break;
         }
     }
@@ -29,184 +29,177 @@ if (tags || typeof tags != 'undefined') {
 
 // Find the SVG Tags belonging to the same subject
 
-if (found_tag != undefined && found_tag != null && found_tag.length) {
+var resultSVG = [];
+if (foundTag) {
     // Find the pages, sub-pages of SVG/Element that are tagged with that specific tag
     var pageList = await page.subpagesExpand(s_svg_ref_href);   // Get subpages, including tags
-    var resultSVG = [];
 
-    for (aPage in pageList) {
-        if (page.hasTag(pageList[aPage], found_tag)) {
-            resultSVG.push(pageList[aPage].slug.split("/").pop(-1).toLowerCase());
+    for (aPage of pageList) {
+        if (page.hasTag(aPage, foundTag)) {
+            resultSVG.push(aPage.slug.split("/").pop(-1).toLowerCase());
         }
     }
 }
 
-// var resultGuide = [];
 var resultAPI = [];
 
- if (s_svg_href) {  %>
+function wrapSVGElement(name) {
+  return template("SVGElement", [name, "SVGRef"]);
+}
+
+if (s_svg_href) {  %>
   <section class="Quick_links" id="Quick_Links">
   <ol>
-   <% if (found_tag) {        
-/*       
-        for( aPage in resultGuide) { // Tutorials and guides matching
+   <% if (foundTag) {
+        for (aTitle of resultSVG) { // SVG entities matching
   %>
-            <li><a href="<%-resultGuide[aPage].url%>"><%-resultGuide[aPage].title%></a></li>
+            <li><%- await wrapSVGElement(aTitle) %></li>
   <%    }
-*/
-        for (aTitle in resultSVG) { // SVG entities matching 
-  %>
-            <li><%- await template("SVGElement", [resultSVG[aTitle]]) %></li>
-  <%    } 
-        for (aTitle in resultAPI) { // SVG-DOM interfaces matching 
-  %>
-            <li><%- await template("domxref", [resultAPI[aTitle]]) %></li>
-  <%    } 
     } %>
    <li><details><summary><%-s_svg_ref_title%></summary><ol>
  <li>A
    <ol>
-     <li><%-await template("SVGElement", ["a"])%></li>
-     <li class="deprecatedElement"><%-await template("SVGElement", ["altGlyph"])%></li>
-     <li class="deprecatedElement"><%-await template("SVGElement", ["altGlyphDef"])%></li>
-     <li class="deprecatedElement"><%-await template("SVGElement", ["altGlyphItem"])%></li>
-     <li><%-await template("SVGElement", ["animate"])%></li>
-     <li><%-await template("SVGElement", ["animateColor"])%></li>
-     <li><%-await template("SVGElement", ["animateMotion"])%></li>
-     <li><%-await template("SVGElement", ["animateTransform"])%></li>
+     <li><%-await wrapSVGElement("a")%></li>
+     <li class="deprecatedElement"><%-await wrapSVGElement("altGlyph")%></li>
+     <li class="deprecatedElement"><%-await wrapSVGElement("altGlyphDef")%></li>
+     <li class="deprecatedElement"><%-await wrapSVGElement("altGlyphItem")%></li>
+     <li><%-await wrapSVGElement("animate")%></li>
+     <li><%-await wrapSVGElement("animateColor")%></li>
+     <li><%-await wrapSVGElement("animateMotion")%></li>
+     <li><%-await wrapSVGElement("animateTransform")%></li>
    </ol>
  </li>
  <li>B-C
    <ol>
-     <li><%-await template("SVGElement", ["circle"])%></li>
-     <li><%-await template("SVGElement", ["clipPath"])%></li>
-     <li class="deprecatedElement"><%-await template("SVGElement", ["color-profile"])%></li>
-     <li><%-await template("SVGElement", ["cursor"])%></li>
+     <li><%-await wrapSVGElement("circle")%></li>
+     <li><%-await wrapSVGElement("clipPath")%></li>
+     <li class="deprecatedElement"><%-await wrapSVGElement("color-profile")%></li>
+     <li><%-await wrapSVGElement("cursor")%></li>
    </ol>
  </li>
  <li>D
    <ol>
-     <li><%-await template("SVGElement", ["defs"])%></li>
-     <li><%-await template("SVGElement", ["desc"])%></li>
+     <li><%-await wrapSVGElement("defs")%></li>
+     <li><%-await wrapSVGElement("desc")%></li>
    </ol>
  </li>
  <li>E
    <ol>
-     <li><%-await template("SVGElement", ["ellipse"])%></li>
+     <li><%-await wrapSVGElement("ellipse")%></li>
    </ol>
  </li>
  <li>F
    <ol>
-     <li><%-await template("SVGElement", ["feBlend"])%></li>
-     <li><%-await template("SVGElement", ["feColorMatrix"])%></li>
-     <li><%-await template("SVGElement", ["feComponentTransfer"])%></li>
-     <li><%-await template("SVGElement", ["feComposite"])%></li>
-     <li><%-await template("SVGElement", ["feConvolveMatrix"])%></li>
-     <li><%-await template("SVGElement", ["feDiffuseLighting"])%></li>
-     <li><%-await template("SVGElement", ["feDisplacementMap"])%></li>
-     <li><%-await template("SVGElement", ["feDistantLight"])%></li>
-     <li><%-await template("SVGElement", ["feFlood"])%></li>
-     <li><%-await template("SVGElement", ["feFuncA"])%></li>
-     <li><%-await template("SVGElement", ["feFuncB"])%></li>
-     <li><%-await template("SVGElement", ["feFuncG"])%></li>
-     <li><%-await template("SVGElement", ["feFuncR"])%></li>
-     <li><%-await template("SVGElement", ["feGaussianBlur"])%></li>
-     <li><%-await template("SVGElement", ["feImage"])%></li>
-     <li><%-await template("SVGElement", ["feMerge"])%></li>
-     <li><%-await template("SVGElement", ["feMergeNode"])%></li>
-     <li><%-await template("SVGElement", ["feMorphology"])%></li>
-     <li><%-await template("SVGElement", ["feOffset"])%></li>
-     <li><%-await template("SVGElement", ["fePointLight"])%></li>
-     <li><%-await template("SVGElement", ["feSpecularLighting"])%></li>
-     <li><%-await template("SVGElement", ["feSpotLight"])%></li>
-     <li><%-await template("SVGElement", ["feTile"])%></li>
-     <li><%-await template("SVGElement", ["feTurbulence"])%></li>
-     <li><%-await template("SVGElement", ["filter"])%></li>
-     <li><%-await template("SVGElement", ["font"])%></li>
-     <li><%-await template("SVGElement", ["font-face"])%></li>
-     <li><%-await template("SVGElement", ["font-face-format"])%></li>
-     <li><%-await template("SVGElement", ["font-face-name"])%></li>
-     <li><%-await template("SVGElement", ["font-face-src"])%></li>
-     <li><%-await template("SVGElement", ["font-face-uri"])%></li>
-     <li><%-await template("SVGElement", ["foreignObject"])%></li>
+     <li><%-await wrapSVGElement("feBlend")%></li>
+     <li><%-await wrapSVGElement("feColorMatrix")%></li>
+     <li><%-await wrapSVGElement("feComponentTransfer")%></li>
+     <li><%-await wrapSVGElement("feComposite")%></li>
+     <li><%-await wrapSVGElement("feConvolveMatrix")%></li>
+     <li><%-await wrapSVGElement("feDiffuseLighting")%></li>
+     <li><%-await wrapSVGElement("feDisplacementMap")%></li>
+     <li><%-await wrapSVGElement("feDistantLight")%></li>
+     <li><%-await wrapSVGElement("feFlood")%></li>
+     <li><%-await wrapSVGElement("feFuncA")%></li>
+     <li><%-await wrapSVGElement("feFuncB")%></li>
+     <li><%-await wrapSVGElement("feFuncG")%></li>
+     <li><%-await wrapSVGElement("feFuncR")%></li>
+     <li><%-await wrapSVGElement("feGaussianBlur")%></li>
+     <li><%-await wrapSVGElement("feImage")%></li>
+     <li><%-await wrapSVGElement("feMerge")%></li>
+     <li><%-await wrapSVGElement("feMergeNode")%></li>
+     <li><%-await wrapSVGElement("feMorphology")%></li>
+     <li><%-await wrapSVGElement("feOffset")%></li>
+     <li><%-await wrapSVGElement("fePointLight")%></li>
+     <li><%-await wrapSVGElement("feSpecularLighting")%></li>
+     <li><%-await wrapSVGElement("feSpotLight")%></li>
+     <li><%-await wrapSVGElement("feTile")%></li>
+     <li><%-await wrapSVGElement("feTurbulence")%></li>
+     <li><%-await wrapSVGElement("filter")%></li>
+     <li><%-await wrapSVGElement("font")%></li>
+     <li><%-await wrapSVGElement("font-face")%></li>
+     <li><%-await wrapSVGElement("font-face-format")%></li>
+     <li><%-await wrapSVGElement("font-face-name")%></li>
+     <li><%-await wrapSVGElement("font-face-src")%></li>
+     <li><%-await wrapSVGElement("font-face-uri")%></li>
+     <li><%-await wrapSVGElement("foreignObject")%></li>
    </ol>
  </li>
  <li>G
    <ol>
-     <li><%-await template("SVGElement", ["g"])%></li>
-     <li><%-await template("SVGElement", ["glyph"])%></li>
-     <li class="deprecatedElement"><%-await template("SVGElement", ["glyphRef"])%></li>
+     <li><%-await wrapSVGElement("g")%></li>
+     <li><%-await wrapSVGElement("glyph")%></li>
+     <li class="deprecatedElement"><%-await wrapSVGElement("glyphRef")%></li>
    </ol>
  </li>
  <li>H
    <ol>
-     <li><%-await template("SVGElement", ["hkern"])%></li>
+     <li><%-await wrapSVGElement("hkern")%></li>
    </ol>
  </li>
  <li>I
    <ol>
-     <li><%-await template("SVGElement", ["image"])%></li>
+     <li><%-await wrapSVGElement("image")%></li>
    </ol>
  </li>
  <li>J-L
    <ol>
-     <li><%-await template("SVGElement", ["line"])%></li>
-     <li><%-await template("SVGElement", ["linearGradient"])%></li>
+     <li><%-await wrapSVGElement("line")%></li>
+     <li><%-await wrapSVGElement("linearGradient")%></li>
    </ol>
  </li>
  <li>M
    <ol>
-     <li><%-await template("SVGElement", ["marker"])%></li>
-     <li><%-await template("SVGElement", ["mask"])%></li>
-     <li><%-await template("SVGElement", ["metadata"])%></li>
-     <li><%-await template("SVGElement", ["missing-glyph"])%></li>
-     <li><%-await template("SVGElement", ["mpath"])%></li>
+     <li><%-await wrapSVGElement("marker")%></li>
+     <li><%-await wrapSVGElement("mask")%></li>
+     <li><%-await wrapSVGElement("metadata")%></li>
+     <li><%-await wrapSVGElement("missing-glyph")%></li>
+     <li><%-await wrapSVGElement("mpath")%></li>
    </ol>
  </li>
  <li>N-P
    <ol>
-     <li><%-await template("SVGElement", ["path"])%></li>
-     <li><%-await template("SVGElement", ["pattern"])%></li>
-     <li><%-await template("SVGElement", ["polygon"])%></li>
-     <li><%-await template("SVGElement", ["polyline"])%></li>
+     <li><%-await wrapSVGElement("path")%></li>
+     <li><%-await wrapSVGElement("pattern")%></li>
+     <li><%-await wrapSVGElement("polygon")%></li>
+     <li><%-await wrapSVGElement("polyline")%></li>
    </ol>
  </li>
  <li>Q-R
    <ol>
-     <li><%-await template("SVGElement", ["radialGradient"])%></li>
-     <li><%-await template("SVGElement", ["rect"])%></li>
+     <li><%-await wrapSVGElement("radialGradient")%></li>
+     <li><%-await wrapSVGElement("rect")%></li>
    </ol>
  </li>
  <li>S
    <ol>
-     <li><%-await template("SVGElement", ["script"])%></li>
-     <li><%-await template("SVGElement", ["set"])%></li>
-     <li><%-await template("SVGElement", ["stop"])%></li>
-     <li><%-await template("SVGElement", ["style"])%></li>
-     <li><%-await template("SVGElement", ["svg"])%></li>
-     <li><%-await template("SVGElement", ["switch"])%></li>
-     <li><%-await template("SVGElement", ["symbol"])%></li>
+     <li><%-await wrapSVGElement("script")%></li>
+     <li><%-await wrapSVGElement("set")%></li>
+     <li><%-await wrapSVGElement("stop")%></li>
+     <li><%-await wrapSVGElement("style")%></li>
+     <li><%-await wrapSVGElement("svg")%></li>
+     <li><%-await wrapSVGElement("switch")%></li>
+     <li><%-await wrapSVGElement("symbol")%></li>
    </ol>
  </li>
  <li>T
    <ol>
-     <li><%-await template("SVGElement", ["text"])%></li>
-     <li><%-await template("SVGElement", ["textPath"])%></li>
-     <li><%-await template("SVGElement", ["title"])%></li>
-     <li class="deprecatedElement"><%-await template("SVGElement", ["tref"])%></li>
-     <li><%-await template("SVGElement", ["tspan"])%></li>
+     <li><%-await wrapSVGElement("text")%></li>
+     <li><%-await wrapSVGElement("textPath")%></li>
+     <li><%-await wrapSVGElement("title")%></li>
+     <li class="deprecatedElement"><%-await wrapSVGElement("tref")%></li>
+     <li><%-await wrapSVGElement("tspan")%></li>
    </ol>
  </li>
  <li>U
    <ol>
-     <li><%-await template("SVGElement", ["use"])%></li>
+     <li><%-await wrapSVGElement("use")%></li>
    </ol>
  </li>
  <li>V-Z
    <ol>
-     <li><%-await template("SVGElement", ["view"])%></li>
-     <li><%-await template("SVGElement", ["vkern"])%></li>
-   </ol>   
+     <li><%-await wrapSVGElement("view")%></li>
+     <li><%-await wrapSVGElement("vkern")%></li>
+   </ol>
  </li>
    </ol></li></details>
    </ol>
