--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -1,5 +1,10 @@
 @import "~@mdn/minimalist/sass/vars/layout";
 
+.ReactModal__Body--open {
+  position: fixed;
+  width: 100%;
+}
+
 .page-content-container.plus {
   $grid-gap: 12px;
   $page-width: 1160px;
@@ -34,7 +39,7 @@
       height: 100%;
       z-index: 10000;
       overflow: auto;
-      background-color: #201139c4;
+      background-color: #291f35c4;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
       display: flex;
@@ -50,12 +55,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 64px 32px;
         overflow: hidden;
-        box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
+        box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.548);
 
-        @media #{$mq-tablet-and-up} {
-          padding: 64px;
+        &:focus {
+          outline: none;
         }
 
         button {
@@ -68,6 +72,7 @@
           border: none;
           font-size: 20px;
           padding: 7px 15px 9px;
+          z-index: 10001;
         }
 
         button:hover {
@@ -79,6 +84,11 @@
         .modal-content {
           position: relative;
           z-index: 10001;
+          padding: 64px 12px;
+
+          @media #{$mq-tablet-and-up} {
+            padding: 64px;
+          }
 
           .dino {
             background-image: url("./svgs/dino.svg");
@@ -487,7 +497,7 @@
           font-size: clamp(16px, calc(2vw * 0.6), 17px);
 
           @media #{$mq-large-desktop-and-up} {
-            font-size: clamp(16px, calc(2vw * 0.6), 18px);
+            font-size: clamp(16px, calc(2vw * 0.6), 17px);
           }
 
           b {
